# agchk

./: .all-contributorsrc  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: maintainer-change.md  self-scan-contribution.md
.github/scripts/: validate_pr_body.py  validate_repo_hygiene.py
.github/workflows/: ci.yml
agchk/: __init__.py  __main__.py  audit.py  cli.py  config.py  contribute.py  maturity.py  report.py  sarif.py  schema.json  schema.py
agchk/scanners/: __init__.py  bug_inference.py  capability_policy.py  code_execution.py  completion_closure.py  daemon_lifecycle.py  excessive_agency.py  hidden_llm.py  impression_memory.py  internal_orchestration.py  loop_safety.py  memory_freshness.py  memory_lifecycle.py  memory_patterns.py  memory_retrieval_i18n.py  observability.py  os_architecture.py  output_pipeline.py  path_filters.py  pipeline_middleware_integrity.py  plugin_execution_policy.py  rag_pipeline_governance.py  role_play_orchestration.py  runtime_complexity.py  secrets.py  self_evolution_capability.py  skill_duplication.py  startup_complexity.py  token_usage.py  tool_enforcement.py  tool_server_boundary.py
contributions/: README.md
docs/: AGENT_PROMPT.md
docs/doctrine/: README.md  agent-os.md  architecture.md  cli-process-pool.md  completion-closure.md  contribution-backflow.md  impression-memory.md  maturity-score.md  mission.md  orchestration.md  stateful-agent.md  target-agent-self-review.md
docs/examples/: contribution-examples.md
docs/governance/: github-repo-setup.md  release-process.md
docs/marketing/: twitter-x-launch-kit.md
docs/superpowers/plans/: 2026-04-24-agchk-hardening-and-profiles.md
docs/templates/: target-agent-self-review.json
scripts/: gen-skill.py
tests/: test_bug_inference_scanner.py  test_cli.py  test_completion_closure_scanner.py  test_contribute.py  test_excessive_agency.py  test_impression_memory_scanner.py  test_internal_architecture_scanners.py  test_maturity_score.py  test_mercury_runtime_scanners.py  test_observability_scanner.py  test_open_webui_platform_scanners.py  test_os_architecture_scanner.py  test_profile_strictness.py  test_report_schema.py  test_sarif.py  test_scanner_false_positives.py  test_self_evolution_capability.py  test_token_usage_scanner.py
