[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agchk"
version = "1.1.2"
description = "Audit the architecture and health of any AI agent system or LLM-integrated project"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["agent", "llm", "audit", "health-check", "ai", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = ["jsonschema>=4.23.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
agchk = "agchk.cli:main"

[project.urls]
"Homepage" = "https://github.com/huangrichao2020/agchk"
"Bug Tracker" = "https://github.com/huangrichao2020/agchk/issues"

[tool.setuptools.packages.find]
include = ["agchk*"]

[tool.setuptools.package-data]
agchk = ["schema.json"]

[tool.ruff]
line-length = 120
